[project]
name = "agentic-rag-system"
version = "0.1.0"
description = "Multiagent RAG system for operational know-how support"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langsmith",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "notebook",
    "chromadb>=1.5.5",
    "sentence-transformers>=5.2.3",
    "pypdf>=6.8.0",
    "tqdm>=4.67.3",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "langchain-text-splitters>=1.1.1",
    "streamlit>=1.55.0",
]
